shaderError.txt
In file included from resources/shader/Cloud.VS.hlsl:1:
./resources/shader/Cloud.hlsli:417:41: error: use of undeclared identifier 'axialDist'
        float3 perpendicular = offset - axialDist * hole.direction;
                                        ^
./resources/shader/Cloud.hlsli:417:53: error: use of undeclared identifier 'hole'
        float3 perpendicular = offset - axialDist * hole.direction;
                                                    ^
./resources/shader/Cloud.hlsli:417:32: error: use of undeclared identifier 'offset'
        float3 perpendicular = offset - axialDist * hole.direction;
                               ^
./resources/shader/Cloud.hlsli:423:19: error: use of undeclared identifier 'axialDist'; did you mean 'radialDist'?
        float t = axialDist / hole.coneLength; // 0.0（入口）～1.0（出口）
                  ^~~~~~~~~
                  radialDist
./resources/shader/Cloud.hlsli:418:15: note: 'radialDist' declared here
        float radialDist = length(perpendicular);
              ^
./resources/shader/Cloud.hlsli:423:31: error: use of undeclared identifier 'hole'
        float t = axialDist / hole.coneLength; // 0.0（入口）～1.0（出口）
                              ^
./resources/shader/Cloud.hlsli:424:36: error: use of undeclared identifier 'hole'
        float currentRadius = lerp(hole.startRadius, hole.endRadius, t);
                                   ^
./resources/shader/Cloud.hlsli:424:54: error: use of undeclared identifier 'hole'
        float currentRadius = lerp(hole.startRadius, hole.endRadius, t);
                                                     ^
./resources/shader/Cloud.hlsli:433:9: error: HLSL requires a type specifier for all declarations
        radialMask = (radialDist > currentRadius * 1.5f) ? 1.0f : (1.0f - radialMask);
        ^
./resources/shader/Cloud.hlsli:438:44: error: use of undeclared identifier 'hole'
        float entryFade = smoothstep(0.0f, hole.coneLength * 0.2f, axialDist); // 入口側のフェード
                                           ^
./resources/shader/Cloud.hlsli:438:68: error: use of undeclared identifier 'axialDist'; did you mean 'radialDist'?
        float entryFade = smoothstep(0.0f, hole.coneLength * 0.2f, axialDist); // 入口側のフェード
                                                                   ^~~~~~~~~
                                                                   radialDist
./resources/shader/Cloud.hlsli:418:15: note: 'radialDist' declared here
        float radialDist = length(perpendicular);
              ^
./resources/shader/Cloud.hlsli:439:54: error: use of undeclared identifier 'hole'
        float exitFade = smoothstep(hole.coneLength, hole.coneLength * 0.8f, axialDist); // 出口側のフェード
                                                     ^
./resources/shader/Cloud.hlsli:439:37: error: use of undeclared identifier 'hole'
        float exitFade = smoothstep(hole.coneLength, hole.coneLength * 0.8f, axialDist); // 出口側のフェード
                                    ^
./resources/shader/Cloud.hlsli:439:78: error: use of undeclared identifier 'axialDist'; did you mean 'radialDist'?
        float exitFade = smoothstep(hole.coneLength, hole.coneLength * 0.8f, axialDist); // 出口側のフェード
                                                                             ^~~~~~~~~
                                                                             radialDist
./resources/shader/Cloud.hlsli:418:15: note: 'radialDist' declared here
        float radialDist = length(perpendicular);
              ^
./resources/shader/Cloud.hlsli:450:9: error: HLSL requires a type specifier for all declarations
        holeMask = smoothstep(0.0f, 1.0f, holeMask);
        ^
./resources/shader/Cloud.hlsli:451:9: error: HLSL requires a type specifier for all declarations
        holeMask = smoothstep(0.0f, 1.0f, holeMask); // 二重適用でさらに滑らかに
        ^
./resources/shader/Cloud.hlsli:456:9: error: HLSL requires a type specifier for all declarations
        holeMask = lerp(1.0f, holeMask, hole.lifeTime);
        ^
./resources/shader/Cloud.hlsli:461:9: error: unknown type name 'mask'
        mask *= holeMask;
        ^
./resources/shader/Cloud.hlsli:461:14: error: expected unqualified-id
        mask *= holeMask;
             ^
./resources/shader/Cloud.hlsli:462:5: error: extraneous closing brace ('}')
    }
    ^
./resources/shader/Cloud.hlsli:464:5: error: expected unqualified-id
    return mask;
    ^
./resources/shader/Cloud.hlsli:465:1: error: extraneous closing brace ('}')
}
^
